Fix the navbar color in Edge and remove horizontal scrollbar

--- a/singularIT/assets/scss/_nav.scss
+++ b/singularIT/assets/scss/_nav.scss
@@ -8,7 +8,8 @@
   width: 100%;
   padding: 0 40px;
 
-  background-color: $congres-color-menu;
+  background-color: $congres-color;
+  opacity: 0.9;
   // box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 
   font-family: 'TruenoUltLt' !important;
