--- a/singularIT/assets/scss/app.scss
+++ b/singularIT/assets/scss/app.scss
@@ -75,6 +75,7 @@ body {
   // font-family: 'TruenoRegular', "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-family: 'TruenoRegular' !important;
   background-color: $congres-light-color !important;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6{
